<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qingyu_command_publisher_py</name>
  <version>0.0.0</version>
  <description>Publish qingyu_api/msg/QingyuCommand from Python.</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>qingyu_api</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
